# web_scraper_project

./: .gitignore  LICENSE  MANIFEST.in  alltext.txt  config.py  example_usage.py  main.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  scraper.py  scraper_results_20250909_172728.json  scraper_results_20250911_083433.json  scraper_results_20250911_083716.json  setup.cfg  setup.py
web_scraper_project/: __init__.py  cli.py  config.py  examples.py
