[metadata]
name = web_scraper_project
version = 1.0.0
description = A simple, respectful web scraper built with Python and BeautifulSoup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kwein123/web-scraper
author = Kevin Weinrich
author_email = weinrichkevin@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: HTML

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.31.0
    beautifulsoup4>=4.12.2
    lxml>=4.9.3

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=5.0.0
    mypy>=1.0.0
progress =
    tqdm>=4.66.1

[options.entry_points]
console_scripts =
    web-scraper-project = main:main
    webscraper = main:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv,
    venv

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short --strict-markers